--- a/shopify-challenge/src/app/search/search.component.scss
+++ b/shopify-challenge/src/app/search/search.component.scss
@@ -43,3 +43,8 @@
 .hide {
     display: none;
 }
+
+// Table styles
+tr th {
+    min-width: 25%;
+}
